added validation to put and post
